[gd_scene load_steps=2 format=3 uid="uid://f73wnfj5taxm"]

[ext_resource type="Script" path="res://Popups.gd" id="1_gl0et"]

[node name="Popups" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gl0et")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ItemPopup" type="PopupPanel" parent="UI"]
unique_name_in_owner = true
position = Vector2i(495, 260)
size = Vector2i(237, 215)

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ItemPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 233.0
offset_bottom = 211.0

[node name="Label" type="Label" parent="UI/ItemPopup/VBoxContainer"]
layout_mode = 2
text = "name"

[node name="HBoxContainer" type="HBoxContainer" parent="UI/ItemPopup/VBoxContainer"]
layout_mode = 2

[node name="Damage" type="Label" parent="UI/ItemPopup/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "damage"

[node name="DamageValue" type="Label" parent="UI/ItemPopup/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "7"

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/ItemPopup/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/ItemPopup/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "damage type"

[node name="DamageTypeValue" type="Label" parent="UI/ItemPopup/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "7"
